add packages to export detection